clang/test/BSC/Negative/SafeZone/unsafe_cast_expr/unsafe_cast_expr.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

#define NULL ((void*)0)

_Trait F {};
_Trait G {};
_Impl _Trait F for int;
_Impl _Trait G for int;

void diffPointCastConver(void) {
  _Unsafe {
    // int * <-> void *
    int *a = NULL;
    _Safe {
      void *b = (void*)a;  // expected-error{{conversion from type 'int *' to 'void *' is forbidden in the safe zone}}
      int *c = (int *)b;   // expected-error{{conversion from type 'void *' to 'int *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // int * <-> double *
    double *a = NULL;
    _Safe {
      int *b = (int *)a;       // expected-error{{conversion from type 'double *' to 'int *' is forbidden in the safe zone}}
      double *c = (double *)b; // expected-error{{conversion from type 'int *' to 'double *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // struct1 * -> struct2*
    struct S1
    {
      int a;
    };
    struct S2
    {
      int b;
    };
    struct S1 *s1 = NULL;
    struct S2 *s2 = NULL;
    _Safe {
      struct S1* s1_1 = (struct S1*)s2;  // expected-error{{conversion from type 'struct S2 *' to 'struct S1 *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // trait1* -> trait2*
    int m = 0;
    int *p = &m;
    _Trait F *f = &m;
    _Safe {
      _Trait G *h = (_Trait G*)p; //ok
      _Trait G *g = (_Trait G*)f; // expected-error{{conversion from type '_Trait F *' to '_Trait G *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // _Owned *<-> raw *
    int *pa = NULL;
    _Safe {
      int *_Owned p1 = (int * _Owned)pa;   // expected-error{{conversion from type 'int *' to 'int *_Owned' is forbidden in the safe zone}}
      pa = (int *)p1;                    // expected-error{{conversion from type 'int *_Owned' to 'int *' is forbidden in the safe zone}}
    }
  }
  _Unsafe {
    // top-level raw pointer casts involving nested _Owned pointers are still forbidden in safe zone
    int* _Owned *pa = NULL;
    _Safe {
      float* _Owned *pb = (float* _Owned *)pa; // expected-error{{conversion from type 'int *_Owned *' to 'float *_Owned *' is forbidden in the safe zone}}
    }
  }
  // _Borrow -> raw  (waiting complement...)
}

void pointCastConver() {
  // int * <-> int
  _Safe {
    int a = 1;
    int *b = (int *)a;       // expected-error{{conversion from type 'int' to 'int *' is forbidden in the safe zone}}
    int c = (int)b;          // expected-error{{conversion from type 'int *' to 'int' is forbidden in the safe zone}}
  }
  // void * <-> int
  _Safe {
    int a = 1;
    void *b = (void *)a;     // expected-error{{conversion from type 'int' to 'void *' is forbidden in the safe zone}}
    int c = (int)b;          // expected-error{{conversion from type 'void *' to 'int' is forbidden in the safe zone}}
  }
  // _Owned int * <-> int
  _Safe {
    int a = 1;
    int *_Owned p1 = (int * _Owned)a;   // expected-error{{conversion from type 'int' to 'int *_Owned' is forbidden in the safe zone}}
    a = (int)p1;                      // expected-error{{conversion from type 'int *_Owned' to 'int' is forbidden in the safe zone}}
  }
  // _Borrow int * -> int  (waiting complement...)
}

void baseTypeCastConver() {
  // long <-> int,
  _Safe {
    long a = 2;
    int b = (int)a;                 // ok: explicit cast allowed
    long c = (long)b;               // int->long ok
    // int -2147483648～2147483647
    constexpr long _a = 10;
    int _b = (int)_a;               // ok
    constexpr long _a_ = 2147483648;
    int _b_ = (int)_a_;             // ok: explicit cast allowed
    int d = (int)2147483647;        // int->int ok
    d = (int)2147483648;            // ok: explicit cast allowed
    d = -2147483649;                // expected-error{{conversion from type 'long' to 'int' is forbidden in the safe zone}}
    // unsigned_int 0~4294967295
    unsigned int e = 0;             // ok
    e = (unsigned int)4294967296;   // ok: explicit cast allowed
    unsigned long f = 1;            // ok
    f = (unsigned long)b;           // ok: explicit cast allowed
    f = (unsigned long)-1;          // ok: explicit cast allowed
  }
  // int <-> char
  _Safe {
    int a = 1;
    // char -128~127
    char b = (char)a;                // ok: explicit cast allowed
    b = (char)1;                     // ok
    b = _Unsafe((char)1);             // ok
    b = _Safe((char)1);               // ok
    b = (char)128;                   // ok: explicit cast allowed
    b = _Unsafe((char)128);           // ok
    b = _Safe((char)128);             // ok: explicit cast allowed

    constexpr int c = 10;
    b = (int)c;
    a = (int)b;                      // char->int ok
    a = (int)'b';                    // char->int ok
    a = _Unsafe((int)b);              // ok
    a = _Safe((int)b);                // ok
    a = (int)(_Unsafe(b));            // ok
    a = (int)(_Safe(b));              // ok
    unsigned int d = 0;
    d = (unsigned int)b;             // ok: explicit cast allowed
  }
  // int <-> bool
  _Safe {
    _Bool a = 0;
    int b = (int)a;          // ok
    _Bool c = (_Bool)b;      // ok: explicit cast allowed
    c = (_Bool)1;
    c = (_Bool)2;            // ok: explicit cast allowed
    c = _Unsafe((_Bool)1);
    c = _Safe((_Bool)1);
    c = (_Bool)(_Safe(1));
    c = (_Bool)(_Unsafe(1));
  }
  // int <-> enum
  enum E {
    ZERO,
    ONE,
    TWO,
  };
  enum F {
    SUN,
    MON,
    TUES,
  };
  _Safe {
    int a = 0;
    enum E num = (enum E)a;     // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
    num = (enum E)0;            // expected-error {{conversion from type 'int' to 'enum E' is forbidden in the safe zone}}
    num = (enum E)ZERO;         // ok
    num = _Safe((enum E)ZERO);
    num = _Unsafe((enum E)ZERO);
    enum F day = SUN;
    num = (enum E)day;          // ok: explicit cast allowed
    num = (enum E)SUN;          // ok: explicit cast allowed
    num = _Safe((enum E)day);    // ok: explicit cast allowed
    num = _Safe((enum E)SUN);    // ok: explicit cast allowed
    num = _Unsafe((enum E)day);  // ok
    num = _Unsafe((enum E)SUN);  // ok
    a = (int)num;               // ok: explicit cast allowed
    a = (int)ZERO;
  }
  // double <-> float
  _Safe {
    double a = 1.0;
    float b = (float)a;      // ok: explicit cast allowed
    a = (double)b;           // ok
    float c = (float)1.0;    // ok
    c = (float)1.2;          // ok: explicit cast allowed
    c = (float)1.2f;         // ok
  }
  // int <-> unsigned int
  _Safe {
    unsigned int a = (unsigned int)1;  // ok
    int b = (int)a;                    // ok: explicit cast allowed
    a = (unsigned int)b;               // ok: explicit cast allowed
    a = (unsigned int)-1;              // ok: explicit cast allowed
  }
}